--- a/cli_project/Gemfile
+++ b/cli_project/Gemfile
@@ -2,3 +2,8 @@ source "https://rubygems.org"
 
 # Specify your gem's dependencies in cli_project.gemspec
 gemspec
+
+gem 'rake'
+gem 'pry'
+gem 'require_all'
+gem 'nokogiri'
